# loot_generator

./: CLAUDE.md  CONFIG.md  Cargo.toml  README.md
config/affix_pools/: default.toml  poison.toml
config/affixes/: accessories.toml  armour.toml  poison.toml  status_effects.toml  weapon.toml
config/base_types/: accessories.toml  armour.toml  weapons.toml
config/currencies/: affix_modification.toml  imbue.toml  poison.toml  pool_currencies.toml  rarity.toml  specific_affixes.toml  unique.toml
config/uniques/: serpent_stare.toml  starfall.toml  titans_grip.toml
config_editor/: Cargo.toml
config_editor/src/: app.rs  input.rs  main.rs  persistence.rs
config_editor/src/views/: affix_pools.rs  affixes.rs  base_types.rs  currencies.rs  mod.rs  uniques.rs
loot_core/: Cargo.toml
loot_core/src/: config.rs  currency.rs  generator.rs  item.rs  lib.rs  storage.rs  types.rs
loot_tui/: Cargo.toml
loot_tui/src/: main.rs
