[workspace]
resolver = "2"
members = ["loot_core", "loot_tui", "config_editor"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
loot_core = { path = "loot_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"
rand_chacha = "0.3"
ratatui = "0.29"
crossterm = "0.28"
